# MCP-IQA-Server

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  iqa_server.py  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
docs/source/: api.rst  examples.rst  index.rst
examples/: basic_usage.py  batch_processing.py  custom_metrics.py  example_client.py
iqa_server/: __init__.py  constants.py  main.py  models.py  server.py  utils.py
iqa_server/core/: config.py  constants.py  exceptions.py  model_definitions.py
iqa_server/indicators/: __init__.py  base.py  interpretations.py  no_reference.py  perceptual.py  traditional.py
iqa_server/mos/: predictor.py  training.py
iqa_server/server/: handlers.py  mcp_server.py  tools.py
iqa_server/utils/: image_utils.py  logging.py  performance.py  validation.py
scripts/: benchmark.py  install_gpu_support.sh
tests/: conftest.py  test_iqa_server.py
tests/integration/: test_mcp_integration.py
tests/test_indicators/: test_base.py  test_no_reference.py  test_traditional.py
tests/test_server/: test_mcp_server.py
tests/test_utils/: test_image_utils.py  test_performance.py  test_validation.py
